- Aggiunte operazioni di copia post-compilazione.

--- a/ouruo-scripts/ouruo-scripts.csproj
+++ b/ouruo-scripts/ouruo-scripts.csproj
@@ -3237,6 +3237,9 @@
     <Content Include="src\SpecialSystems\README.TXT" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetPath) ..\..\..\ouruo-server-bin</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
