--- a/ouruo-scripts/ouruo-scripts.csproj
+++ b/ouruo-scripts/ouruo-scripts.csproj
@@ -120,6 +120,8 @@
     <Compile Include="src\Custom\Encryption\NoEncryption.cs" />
     <Compile Include="src\Custom\Encryption\TwofishBase.cs" />
     <Compile Include="src\Custom\Encryption\TwofishEncryption.cs" />
+    <Compile Include="src\Custom\MapTracker\MapTracker.cs" />
+    <Compile Include="src\Custom\MapTracker\WorldStone.cs" />
     <Compile Include="src\Custom\OurUOPlayerMobile.cs" />
     <Compile Include="src\Engines\BulkOrders\Books\BOBFilter.cs" />
     <Compile Include="src\Engines\BulkOrders\Books\BOBFilterGump.cs" />
